# botanu-sdk-python

./: .clomonitor.yml  .pre-commit-config.yaml  .repolinterrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  repolinter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  repolinter.yml  scorecard.yml
docs/: index.md
docs/api/: configuration.md  decorators.md  event.md  tracking.md
docs/concepts/: architecture.md  context-propagation.md  run-context.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integration/: auto-instrumentation.md  collector.md  existing-otel.md  kubernetes.md
docs/patterns/: anti-patterns.md  best-practices.md
docs/tracking/: content-capture.md  data-tracking.md  llm-tracking.md  outcomes.md
scripts/: pre_publish_check.py
src/botanu/: __init__.py  _version.py  register.py
src/botanu/integrations/: __init__.py  tenacity.py
src/botanu/models/: __init__.py  run_context.py
src/botanu/processors/: __init__.py  enricher.py  resource_enricher.py  sampled.py
src/botanu/resources/: __init__.py  detector.py
src/botanu/sampling/: __init__.py  content_sampler.py
src/botanu/sdk/: __init__.py  bootstrap.py  config.py  context.py  decorators.py  middleware.py  pii.py  pii_presidio.py  span_helpers.py
src/botanu/tracking/: __init__.py  data.py  ledger.py  llm.py  metrics.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_bootstrap.py  test_config.py  test_content_sampler.py  test_context.py  test_data_tracking.py  test_decorators.py  test_enricher.py  test_event.py  test_ledger.py  test_llm_tracking.py  test_middleware.py  test_pii.py  test_resource_detector.py  test_resource_enricher.py  test_run_context.py  test_span_helpers.py
